--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,12 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "league/omnipay": "^3.2",
+        "mercadopago/dx-php": "^2.6",
+        "omnipay/paypal": "^3.0",
         "open-admin-ext/helpers": "^1.0",
-        "open-admin-org/open-admin": "^1.0"
+        "open-admin-org/open-admin": "^1.0",
+        "paypal/rest-api-sdk-php": "^1.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
